# sync-tool

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  azure-pipelines-quality.yml  azure-pipelines-release.yml  config.example.json  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  sonar-project.properties
docs/: docs_livereload.py
docs/source/: conf.py  developer.rst  index.rst
docs/source/developer/: documentation.rst  introduction.rst  repository.rst  style.rst  testing.rst
sync_tool/: app.py  cli.py  configuration.py  constants.py  contants.py  logging.py  main.py  settings.py  sync_controller.py
sync_tool/adapters/: jama.py
sync_tool/core/: adapter_base.py  adapter_resolve.py  exceptions.py
sync_tool/core/data/: __init__.py  data_configuration.py  data_store.py  internal_type_storage.py
sync_tool/core/data/mapping/: mapping_helper.py  mapping_internal_type.py  mapping_provider.py
sync_tool/core/data/type/: field_type.py  internal_type.py
sync_tool/core/internal_type/: internal_type.py
sync_tool/core/provider/: __init__.py  provider_base.py  provider_configuration.py  provider_exceptions.py  provider_resolve.py
sync_tool/core/provider/mapping/: __init__.py  mapping_helper.py  mapping_internal_type.py
sync_tool/core/sync/: __init__.py  sync_configuration.py  sync_item.py  sync_rule.py  sync_transformer.py
sync_tool/core/types/: __init__.py  field_type.py  internal_type.py
sync_tool/providers/: azure_dev_ops.py  jama.py  testing.py
tests/: test_configuration.py  test_placeholder.py
tests/core/data/mapping/: test_mapping_helper.py  test_mapping_internal_type.py  test_mapping_provider.py
tests/core/data/type/: test_field_type.py  test_internal_type.py
tests/core/internal_type/: test_field_type.py  test_internal_type.py
tests/core/provider/: test_provider_configuration.py  test_provider_resolve.py
